--- a/Ribichenko_kurs/MainWindow.xaml
+++ b/Ribichenko_kurs/MainWindow.xaml
@@ -68,6 +68,7 @@
                         BorderBrush="#6A95D7" BorderThickness="1" SnapsToDevicePixels="True" >
                                 <ScrollViewer x:Name="PART_ContentHost" Focusable="false"/>
                             </Border>
+                            
                         </ControlTemplate>
                     </TextBox.Template>
                 </TextBox>
@@ -114,12 +115,20 @@
             <Button x:Name="reg_button" HorizontalAlignment="Center" Margin="480,40" Padding="30,0,0,0" FontSize="30" FontWeight="Bold" BorderBrush="#003483" MinHeight="67" MinWidth="400" Background="#2DA0E1" Content="Регистрация" Foreground="White" Click="reg_button_Click" Width="370" Height="59">
                 <Button.Template >
                     <ControlTemplate TargetType="{x:Type Button}" >
-                        <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="2" CornerRadius="10">
+                        <Border x:Name="rew" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="2" CornerRadius="10">
                             <Border.Background>
                                 <Brush>#00BE41</Brush>
                             </Border.Background>
                             <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="rew" Property="Background" Value="#006D25"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="rew" Property="Background" Value="#003D15"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Button.Template>
             </Button>
